continued implementation of transformation items: they can now change token size and image, and have the basic implementation of their combat power objects.

--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -48,7 +48,8 @@
   &__header--restore { background-color: colors.$heal; }
   &__header--transfer { background-color: colors.$transfer; }
   &__header--equip { background-color: colors.$gear; }
-
+  &__header--transformation { background: colors.$transformation-gradient; }
+  &__header--transformation-remove { background: colors.$transformation-remove-gradient; }
 
   &__description {
     @extend .underdog-regular;
