--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -48,6 +48,8 @@
   --erps-card-header-effect: #9A5D2D;
   --erps-card-header-delete: #555555;
   --erps-card-header-transfer: #9B4B7D;
+  --erps-card-header-transformation: linear-gradient(270deg, #005716, #0066cc);
+  --erps-card-header-transformation-remove: linear-gradient(270deg, #0066cc, #005716);
 
   --erps-card-header-initiative: #3498db;
   --erps-card-header-initiative-npc: #e67e22;
@@ -240,6 +242,8 @@ $heal: var(--erps-card-header-heal);
 $effect: var(--erps-card-header-effect);
 $delete: var(--erps-card-header-delete);
 $description-hr: var(--erps-card-header-description-hr);
+$transformation-gradient: var(--erps-card-header-transformation);
+$transformation-remove-gradient: var(--erps-card-header-transformation-remove);
 $transfer: var(--erps-card-header-transfer);
 
 $hit: var(--erps-chat-details-hit);
