--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -208,7 +208,7 @@
     }
 
     .items-panel__controls--cursed {
-      color: #781990;
+      color: colors.$cursed;
     }
 
     .items-panel__controls--disabled {
