--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -22,11 +22,19 @@
           <label class="transformation-header__label">{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.label'}}:</label>
           <div class="transformation-header__details">
             <span class="transformation-header__name">{{actor.flags.eventide-rp-system.activeTransformationName}}</span>
-            {{#if editable}}
+            {{#if (and editable (or (not actor.flags.eventide-rp-system.activeTransformationCursed) @root.isGM))}}
               <a class="transformation-header__dismiss" data-action="removeTransformation" title="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.Remove'}}">
-                <i class="fas fa-undo"></i>
+                <i class="fas fa-undo {{#if actor.flags.eventide-rp-system.activeTransformationCursed}}transformation-header__dismiss--cursed{{/if}}"></i>
+              </a>
+            {{else}}
+              <a 
+                class="transformation-header__dismiss--cursed" 
+                title="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.Remove'}}" 
+                disabled>
+                <i class="fas fa-lock-keyhole"></i>
               </a>
             {{/if}}
+            
           </div>
         </div>
       {{/if}}
