--- a/templates/item/attribute-parts/transformation.hbs
+++ b/templates/item/attribute-parts/transformation.hbs
@@ -2,19 +2,11 @@
   <div class="form-group">
     <label>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Size"}}</label>
     <div class="form-fields">
-      <div class="base-form__slider-wrapper">
-        <input 
-          type="range" 
-          class="base-form__range-slider" 
-          name="system.size" 
-          value="{{system.size}}" 
-          min="0.5" 
-          max="5" 
-          step="0.5"
-          data-dtype="Number"
-        >
-        <span class="base-form__range-value">{{system.size}}×</span>
-      </div>
+      <select class="base-form__select" name="system.size" data-dtype="Number">
+        {{#each sizeOptions as |size|}}
+          <option value="{{size}}" {{#if (eq ../system.size size)}}selected{{/if}}>{{size}}×</option>
+        {{/each}}
+      </select>
     </div>
   </div>
 </div>
