--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -20,47 +20,77 @@
         {{/if}}
       </div>
     </li>
-    {{#each combatPowers as |item id|}}
-  <li
-    class='items-panel__list-item'
-    data-item-id='{{item._id}}'
-    data-drag='true'
-    data-document-class='Item'
-  >
-    <div class='items-panel__name items-panel__list-cell'>
-      <div class='items-panel__image'>
-        <a class='rollable' data-roll-type='item' data-action='roll'>
-          <img
-            src='{{item.img}}'
-            title='{{item.name}}'
-            width='24'
-            height='24'
-          />
-        </a>
-      </div>
-      <div>{{item.name}}</div>
-    </div>
-    <div class='item-cost items-panel__prop items-panel__list-cell'>{{item.system.cost}}</div>
-    <div class='items-panel__usage items-panel__list-cell'><div>{{item.system.usageInfo}}</div></div>
-    <div class='items-panel__controls items-panel__list-cell'>
-      <a
-        class='items-panel__control item-edit'
-        title='{{localize "DOCUMENT.Update" type='Combat Power'}}'
-        data-action='viewDoc'
+    {{#if (eq transformationCombatPowers.length 0)}}
+        {{#each combatPowers as |item id|}}
+      <li
+        class='items-panel__list-item'
+        data-item-id='{{item._id}}'
+        data-drag='true'
+        data-document-class='Item'
       >
-        <i class='fas fa-edit'></i>
-      </a>
-      {{#if @root.editable}}
-        <a
-          class='items-panel__control item-delete'
-          title='{{localize "DOCUMENT.Delete" type='Combat Power'}}'
-          data-action='deleteDoc'
-        >
-          <i class='fas fa-trash'></i>
-        </a>
-      {{/if}}
-    </div>
-  </li>
-{{/each}}
+        <div class='items-panel__name items-panel__list-cell'>
+          <div class='items-panel__image'>
+            <a class='rollable' data-roll-type='item' data-action='roll'>
+              <img
+                src='{{item.img}}'
+                title='{{item.name}}'
+                width='24'
+                height='24'
+              />
+            </a>
+          </div>
+          <div>{{item.name}}</div>
+        </div>
+        <div class='item-cost items-panel__prop items-panel__list-cell'>{{item.system.cost}}</div>
+        <div class='items-panel__usage items-panel__list-cell'><div>{{item.system.usageInfo}}</div></div>
+        <div class='items-panel__controls items-panel__list-cell'>
+          <a
+            class='items-panel__control item-edit'
+            title='{{localize "DOCUMENT.Update" type='Combat Power'}}'
+            data-action='viewDoc'
+          >
+            <i class='fas fa-edit'></i>
+          </a>
+          {{#if @root.editable}}
+            <a
+              class='items-panel__control item-delete'
+              title='{{localize "DOCUMENT.Delete" type='Combat Power'}}'
+              data-action='deleteDoc'
+            >
+              <i class='fas fa-trash'></i>
+            </a>
+          {{/if}}
+        </div>
+      </li>
+    {{/each}}
+    {{else}}
+      {{#each transformationCombatPowers as |item id|}}
+        <li
+        class='items-panel__list-item'
+        data-item-id='{{item._id}}'
+        data-drag='true'
+        data-document-class='Item'
+      >
+        <div class='items-panel__name items-panel__list-cell'>
+          <div class='items-panel__image'>
+            <a class='rollable' data-roll-type='item' data-action='roll'>
+              <img
+                src='{{item.img}}'
+                title='{{item.name}}'
+                width='24'
+                height='24'
+              />
+            </a>
+          </div>
+          <div>{{item.name}}</div>
+        </div>
+        <div class='item-cost items-panel__prop items-panel__list-cell'>{{item.system.cost}}</div>
+        <div class='items-panel__usage items-panel__list-cell'><div>{{item.system.usageInfo}}</div></div>
+        <div class='items-panel__controls items-panel__list-cell'>
+          
+        </div>
+      </li>
+      {{/each}}
+    {{/if}}
   </ol>
 </section>
