--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -30,7 +30,7 @@
     <div class="base-form__color-picker-with-hex color-picker-with-hex">
       <label class="base-form__label--small" for="color-iconTint">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:</label>
       <div class="color-picker-container">
-        <div class="color-preview" id="preview-iconTint" style="background-color: {{iconTint}}"></div>
+        {{!-- <div class="color-preview" id="preview-iconTint" style="background-color: {{iconTint}}"></div> --}}
         <input type="color" class="color-picker" id="color-iconTint" name="iconTint" value="{{iconTint}}">
         <input type="text" class="hex-input" id="hex-iconTint" placeholder="Hex color" value="{{iconTint}}">
       </div>
