Enhanced color picker functionality with improved logging for testing mode; added dynamic initialization for existing color pickers and refined hex input handling in item sheets.

--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -94,8 +94,22 @@
           <div class="base-form__color-picker-with-hex color-picker-with-hex">
             <div class="color-picker-container">
               <div class="color-preview" id="preview-textColor" style="background-color: {{system.textColor}}"></div>
-              <input type="color" class="color-picker" id="color-textColor" value="{{system.textColor}}" data-edit="system.textColor">
-              <input type="text" class="hex-input" id="hex-textColor" placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}" value="{{system.textColor}}" name="system.textColor" data-edit="system.textColor">
+              <input 
+                type="color" 
+                class="color-picker" 
+                id="color-textColor" 
+                value="{{system.textColor}}" 
+                name="display.textColor"
+                data-edit="system.textColor"
+              >
+              <input type="text" 
+                class="hex-input" 
+                id="hex-textColor" 
+                placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}" 
+                value="{{system.textColor}}" 
+                name="system.textColor"
+                data-edit="system.textColor"
+              >
             </div>
           </div>
         </div>
@@ -106,8 +120,22 @@
           <div class="base-form__color-picker-with-hex color-picker-with-hex">
             <div class="color-picker-container">
               <div class="color-preview" id="preview-bgColor" style="background-color: {{system.bgColor}}"></div>
-              <input type="color" class="color-picker" id="color-bgColor" value="{{system.bgColor}}" data-edit="system.bgColor">
-              <input type="text" class="hex-input" id="hex-bgColor" placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}" value="{{system.bgColor}}" name="system.bgColor" data-edit="system.bgColor">
+              <input 
+                type="color" 
+                class="color-picker" 
+                id="color-bgColor" 
+                value="{{system.bgColor}}"
+                name="display.bgColor"
+                data-edit="system.bgColor"
+              >
+              <input type="text" 
+                class="hex-input" 
+                id="hex-bgColor" 
+                placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}" 
+                value="{{system.bgColor}}" 
+                name="system.bgColor" 
+                data-edit="system.bgColor"
+              >
             </div>
           </div>
         </div>
